google login + discovery work now; refs #26453